--- a/ClientApp/src/app/members/member-edit/member-edit.component.html
+++ b/ClientApp/src/app/members/member-edit/member-edit.component.html
@@ -58,7 +58,7 @@
 
             </tab>
             <tab heading="Edit Photos">
-                <p>Under construction...</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
