--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div *ngIf="!registerMode" style="text-align: center;">
         <h1>Find your media naranja</h1>
-        <p class="lead">Come on in to view your matches.. all you need to do is sign up!</p>
+        <p class="lead">Come on in to view your matches. All you need to do is sign up!</p>
         <div class="text-center">
             <button 
                 (click)="registerToggle()"
