--- a/ClientApp/src/app/register/register.component.html
+++ b/ClientApp/src/app/register/register.component.html
@@ -1,21 +1,38 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     <div class="mb-3">
         <input 
-            type="text" 
+            type="text"
+            [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched"
             class="form-control"
             name="username"
-            [(ngModel)]="model.username"
+            formControlName="username"
             placeholder="Username">
+            <div class="invalid-feedback">Enter a username</div>
     </div>
     <div class="mb-3">
         <input 
-            type="password" 
+            type="password"
+            [class.is-invalid]="registerForm.get('password')?.errors && registerForm.get('password')?.touched"
             class="form-control"
             name="password"
-            [(ngModel)]="model.password"
+            formControlName="password"
             placeholder="Password">
+            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('required')">Enter a password</div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('minlength')">Password must be at least 4 characters</div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('maxlength')">Password must be at most 8 characters</div>
+    </div>
+    <div class="mb-3">
+        <input 
+            type="password"
+            [class.is-invalid]="registerForm.get('confirmPassword')?.errors && registerForm.get('confirmPassword')?.touched"
+            class="form-control"
+            name="password"
+            formControlName="confirmPassword"
+            placeholder="Confirm password">
+            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('required')">Enter a confirmation password</div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('notMatching')">Confirmation password doesn't match</div>
     </div>
     <div class="text-center">
         <button
@@ -31,3 +48,7 @@
         </button>
     </div>
 </form>
+
+
+<p>Form value: {{registerForm.value | json}}</p>
+<p>Form status: {{registerForm.status | json}}</p>
