--- a/ClientApp/src/app/register/register.component.html
+++ b/ClientApp/src/app/register/register.component.html
@@ -16,9 +16,8 @@
     <app-text-input
         [formControl]="$any(registerForm.controls['knownAs'])" 
         [label]="'Known As'"></app-text-input>
-    <app-text-input
-        [formControl]="$any(registerForm.controls['dateOfBirth'])" 
-        [label]="'Date of birth'"></app-text-input>
+    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
+        [label]="'Date of Birth'" [maxDate]="maxDate"></app-date-picker >
     <app-text-input
         [formControl]="$any(registerForm.controls['city'])" 
         [label]="'City'"></app-text-input>
