--- a/ClientApp/src/app/members/member-edit/member-edit.component.html
+++ b/ClientApp/src/app/members/member-edit/member-edit.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <div>
                     <strong>Last active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive + 'Z' | timeago}}</p>
                 </div>
                 <div>
                     <strong>Member since:</strong>
