Adds identity and role management

--- a/ClientApp/src/app/members/member-detail/member-detail.component.html
+++ b/ClientApp/src/app/members/member-detail/member-detail.component.html
@@ -62,7 +62,7 @@
       </tab>
       <tab heading="Messages" (selectTab)="onTabActivated($event)">
         <app-member-messages
-          [username]="member.username"
+          [username]="member.userName"
           [messages]="messages"
         ></app-member-messages>
       </tab>
