--- a/ClientApp/src/app/members/member-card/member-card.component.html
+++ b/ClientApp/src/app/members/member-card/member-card.component.html
@@ -8,7 +8,7 @@
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button
-          routerLink="/members/{{ member.username }}"
+          routerLink="/members/{{ member.userName }}"
           class="btn btn-primary"
         >
           <i class="fa fa-user"></i>
@@ -21,7 +21,7 @@
       </li>
       <li class="list-inline-item">
         <button
-          routerLink="/members/{{ member.username }}"
+          routerLink="/members/{{ member.userName }}"
           [queryParams]="{ tab: 'Messages' }"
           class="btn btn-primary"
         >
