Adds Signalr and UnitOfWork

--- a/ClientApp/src/app/members/member-card/member-card.component.html
+++ b/ClientApp/src/app/members/member-card/member-card.component.html
@@ -8,7 +8,7 @@
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button
-          routerLink="/members/{{ member.userName }}"
+          routerLink="/members/{{ member.username }}"
           class="btn btn-primary"
         >
           <i class="fa fa-user"></i>
@@ -21,7 +21,7 @@
       </li>
       <li class="list-inline-item">
         <button
-          routerLink="/members/{{ member.userName }}"
+          routerLink="/members/{{ member.username }}"
           [queryParams]="{ tab: 'Messages' }"
           class="btn btn-primary"
         >
@@ -32,7 +32,13 @@
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user me-2"></i>
+      <span
+        [class.is-online]="
+          (presenceService.onlineUsers$ | async)?.includes(member.username)
+        "
+      >
+        <i class="fa fa-user me-2"></i>
+      </span>
       {{ member.knownAs }}, {{ member.age }}
     </h6>
     <p class="card-text text-muted text-center">{{ member.city }}</p>
