--- a/ClientApp/src/app/members/member-messages/member-messages.component.html
+++ b/ClientApp/src/app/members/member-messages/member-messages.component.html
@@ -1,11 +1,17 @@
 <div class="card">
   <div class="card-body">
-    <div *ngIf="messages.length === 0">
+    <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
       No messages yet... say hi by using the message box below
     </div>
 
-    <ul *ngIf="messages.length > 0" class="chat">
-      <li *ngFor="let message of messages">
+    <ul
+      #scrollMe
+      style="overflow: scroll; height: 500px"
+      [scrollTop]="scrollMe.scrollHeight"
+      *ngIf="(messageService.messageThread$ | async)!.length > 0"
+      class="chat"
+    >
+      <li *ngFor="let message of messageService.messageThread$ | async">
         <div>
           <span class="chat-img float-end">
             <img
@@ -17,8 +23,8 @@
           <div class="chat-body">
             <div class="header">
               <small class="text-muted">
-                <span class="fa fa-clock-o">&nbsp;{{
-                  message.messageSent + "Z" | timeago
+                <span class="fa fa-clock-o">{{
+                  message.messageSent | timeago
                 }}</span>
                 <span
                   class="text-danger"
@@ -32,7 +38,7 @@
                   *ngIf="
                     message.dateRead && message.senderUsername !== username
                   "
-                  >&nbsp;(read {{ message.dateRead + "Z" | timeago }})</span
+                  >&nbsp;(read {{ message.dateRead | timeago }})</span
                 >
               </small>
             </div>
