--- a/ClientApp/src/app/members/member-detail/member-detail.component.html
+++ b/ClientApp/src/app/members/member-detail/member-detail.component.html
@@ -7,9 +7,14 @@
         class="card-img-top img-thumbnail"
       />
       <div class="card-body">
-        <div class="mb-2" *ngIf="(presenceService.onlineUsers$ | async)?.includes(member.username)">
+        <div
+          class="mb-2"
+          *ngIf="
+            (presenceService.onlineUsers$ | async)?.includes(member.username)
+          "
+        >
           <i class="fa fa-user-circle text-success"></i> Online now
-      </div>
+        </div>
         <div>
           <strong>Location:</strong>
           <p>{{ member.city }}, {{ member.country }}</p>
@@ -20,7 +25,7 @@
         </div>
         <div>
           <strong>Last active:</strong>
-          <p>{{member.lastActive | timeago}}</p>
+          <p>{{ member.lastActive | timeago }}</p>
         </div>
         <div>
           <strong>Member since:</strong>
@@ -57,11 +62,11 @@
         #photoTab="tab"
         (selectTab)="onTabActivated($event)"
       >
-        <ngx-gallery
-          [options]="galleryOptions"
-          [images]="galleryImages"
-          class="ngx-gallery"
-        ></ngx-gallery>
+        <gallery
+          *ngIf="photoTab.active"
+          [items]="images"
+          class="gallery"
+        ></gallery>
       </tab>
       <tab heading="Messages" (selectTab)="onTabActivated($event)">
         <app-member-messages
